overflow problem solved, questions array added

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
 h1{
     text-align: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    margin: 3rem;
+    margin: 2rem;
 }
 #questionbody{
     align-items: center;
@@ -12,6 +12,7 @@ h1{
     flex-direction: column;
 }
 #choicebox{
+    overflow: hidden;
     text-align: center;
     margin: 0.5rem;
     border: 5px solid yellow;
@@ -29,8 +30,17 @@ h1{
     border-color: blue;
 }
 #questionbox{
+    overflow: hidden;
+    text-align: center;
     margin-bottom: 5rem;
     border: 5px solid white;
     height: 25rem;
     width: 30rem;
+}
+#questionbox span{
+    margin-top: 11.75rem;
+    display: block;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 1.5rem;
+    color: purple;
 }
